# main_computer

./: .dockerignore  .gitattributes  .gitignore  Dockerfile.executor  Dockerfile.full_executor  Dockerfile.hub  Dockerfile.hub.exp-fdb  Dockerfile.hub.mainnet  Dockerfile.hub.testnet  ENVIRONMENT.md  README.md  TODO.md  antigit.py  bootstrap-main-computer-python-windows.ps1  bootstrap-main-computer-windows.ps1  conftest.py  control-main-computer.ps1  crypto-network-coolify-testnet-runbook.md  deploy-contracts-mainnet.all.txt  deploy-contracts-mainnet.json  dev-hub-start.bat  diagnose_start.py  docker-compose.applications.yml  docker-compose.astrometric.yml  docker-compose.dev.yml  docker-compose.executor.yml  docker-compose.game-renderer.yml  docker-compose.gitea.yml  docker-compose.onlyoffice.yml  exp-fdb-agent.py  exp-fdb-hub.py  export-main-computer-test.ps1  git-control.py  git_dirty.py  hub-chain-testnet-mainnet-architecture.md  install-main-computer-python-target.ps1  micro_agent_canvas.py  missing.txt  mother.md  new_diff.py  (+14 more)
.githooks/: pre-commit
contracts/: AlphaBetaLockout.sol  README.md
docker/astrometric-renderer/: CMakeLists.txt  Dockerfile  README.md
docker/astrometric-renderer/shaders/: astrometric_service.comp
docker/astrometric-renderer/src/: astrometric_renderer.cpp  astrometric_renderer.cu
docker/astrometric-renderer/upstream/: README.md
main_computer/: __init__.py  activity copy.py  agent_shape_smoke.py  ai_control.py  ai_web_search.py  aider_agent.py  aider_web_context.py  app_control.py  applications_service.py  astrometric_core.py  astrometric_renderer_service.py  blockchain_service.py  blog_install.py  captain_cli.py  catalog.py  chat_ai_subprocess.py  chat_console.py  cli.py  conductor.py  conductor_worker.py  config.py  container_runtime.py  contract_config.py  credit_units.py  deployment_controllers.py  dev_chain_bridge.py  dev_chain_runtime.py  dev_chain_smoke_support.py  dev_faucet.py  diagnose_parallel_routing.py  diagnostics.py  directus_blog_bootstrap.py  docker_executor.py  document_pdf_pixel_proof.py  document_pdf_raster.py  duckduckgo_web_search.py  email_client.py  energy.py  energy_chain.py  executor_backend.py  (+254 more)
pretty_docs/: allfather-control-plane.md  allfather-coolify-container.md  cloudflare-mail-worker-hidden-ingest-runbook.md  crypto-network-coolify-testnet-runbook.md  git-tools-project-level-publishing.md  great-library-email-account-system-plan.md  hub-admin-rotation-session-runbook.md  hub-backend-api-phased-plan.md  hub-chain-testnet-mainnet-architecture.md  hub-compute-credit-r1-ledger-api.md  hub-compute-credit-r2-indexer.md  hub-compute-credit-r2b-contract-smoke.md  hub-compute-credit-settlement-phase0.md  hub-coolify-deploy-runbook.md  index.json  main-computer-user-guide.md  mainnet-chain-redeploy-runbook.md  mcel-application-authoring.md  mcel-authored-surface-document.md  mcel-calculator-requirements.md  mcel-code-editor-authoring-status.md  mcel-code-editor-preview-host.md  mcel-code-editor-requirements.md  mcel-code-studio-example.md  (+23 more)
(+980 files in other folders)
